--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -14,7 +14,7 @@
     <string name="lyrics_source_via_youtubemusic">" (YouTube Music より)"</string>
     <string name="lyrics_source_youtube">YouTube</string>
     <string name="lyrics_source_petitlyrics">プチリリ</string>
-    <string name="generic_network_error">ネットワークエラーが発生しました</string>
+    <string name="generic_error">エラーが発生しました</string>
     <string name="s_page_preferences">設定</string>
     <string name="s_group_theming">テーマ</string>
     <string name="s_key_accent_source">アクセント色</string>
