--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -126,4 +126,28 @@
     <string name="s_key_feed_enable_moods_row">「おすすめのプレイリスト」行を有効にする</string>
     <string name="s_key_feed_enable_new_row">「新作」行を有効にする</string>
     <string name="s_group_home_feed">おすすめフィード</string>
+    <string name="radio_builder_title">ラジオ番組を作成</string>
+    <string name="radio_builder_next_button">次へ</string>
+    <string name="radio_builder_play_last_button">以前のラジオを聴く</string>
+    <string name="radio_builder_recent_button">最近のラジオ</string>
+    <string name="radio_builder_artists_title">アーティストを選択</string>
+    <string name="radio_builder_modifiers_title">好みを選択</string>
+    <string name="radio_builder_modifier_selection_type">曲の選択方法</string>
+    <string name="radio_builder_modifier_selection_type_familiar">おなじみの曲</string>
+    <string name="radio_builder_modifier_selection_type_blend">ブレンド</string>
+    <string name="radio_builder_modifier_selection_type_discover">おすすめ</string>
+    <string name="radio_builder_modifier_variety">アーティストのバラエティ</string>
+    <string name="radio_builder_modifier_variety_low">低</string>
+    <string name="radio_builder_modifier_variety_medium">中</string>
+    <string name="radio_builder_modifier_variety_high">高</string>
+    <string name="radio_builder_modifier_filter_a">フィルター</string>
+    <string name="radio_builder_modifier_filter_a_popular">人気</string>
+    <string name="radio_builder_modifier_filter_a_hidden">隠れた</string>
+    <string name="radio_builder_modifier_filter_a_new">新作</string>
+    <string name="radio_builder_modifier_filter_b">ジャンル</string>
+    <string name="radio_builder_modifier_filter_pump_up">パンプアップ</string>
+    <string name="radio_builder_modifier_filter_chill">チル</string>
+    <string name="radio_builder_modifier_filter_upbeat">アップビート</string>
+    <string name="radio_builder_modifier_filter_downbeat">ダウンビート</string>
+    <string name="radio_builder_modifier_filter_focus">集中</string>
 </resources>
