--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -119,6 +119,8 @@
     <string name="s_sub_open_np_on_song_played">曲をタップしたときにプレーヤーが自動で開きます</string>
     <string name="s_key_persistent_queue">再生キューを覚える</string>
     <string name="s_sub_persistent_queue">アプリを閉じても曲キューは保持されます</string>
+    <string name="s_key_add_songs_to_history">聴いた曲をYouTubeの歴史に追加する</string>
+    <string name="s_sub_add_songs_to_history">アプリ内で流された曲をYouTubeに通信し、アカウントの歴史に追加されます</string>
     <string name="s_key_current_theme">現在のテーマ</string>
     <string name="s_theme_editor_title">テーマを変更する</string>
     <string name="s_option_accent_theme">テーマから</string>
