--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="widget_name_lyrics_line_horizontal">Horizontal lyrics line</string>
     <string name="widget_description_lyrics_line_horizontal"></string>
+    <string name="widget_name_song_queue">Song queue</string>
+    <string name="widget_description_song_queue" />
 </resources>
